--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-solicitud/form-solicitud.component.html
@@ -80,7 +80,7 @@
               (addressForm.get('desarrolloSolicitud').invalid && estaEditando)
             "
           >
-            Desarrollo 
+            Desarrollo
           </label>
         </div>
         <div class="col d-flex">
@@ -88,6 +88,7 @@
             class="quill-editor-style card position-relative quill-editor-style--max-height"
 
             [modules]="config"
+            [formats]="formats"
             (onContentChanged)="maxLength($event, 5000)"
             formControlName="desarrolloSolicitud"
             [class.invalid]="
@@ -237,6 +238,7 @@
             class="quill-editor-style card position-relative quill-editor-style--max-height"
 
             [modules]="config"
+            [formats]="formats"
             required
             (onContentChanged)="maxLength($event, 5000)"
             formControlName="observaciones"
