--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
@@ -3,7 +3,7 @@
 </button>
 
 <div class="text-center">
-  <h1 class="title-menu--h1">
+  <h1 class="title-menu--h1 text-limit">
     {{ data.sesionComiteTema.tema }}
   </h1>
 
