--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-orden-del-dia/crear-orden-del-dia.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-orden-del-dia/crear-orden-del-dia.component.html
@@ -114,7 +114,9 @@
                 </div>
                 <div class="col d-flex">
                   <mat-form-field class="full-width">
-                    <input matInput #temaInput type="text" formControlName="tema" maxlength="5000" required />
+                    <textarea matInput formControlName="tema" #temaInput type="text"
+                    style="margin: 0px; width: 100%;border: none;height: auto;" maxlength="5000" required>
+                    </textarea>
                     <input type="hidden" formControlName="sesionTemaId" />
                   </mat-form-field>
                   <span
