--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -245,7 +245,7 @@
                   </p>
                   <section>
                     <b>Observaciones</b>:
-                    <div class="text-color" [innerHTML]="innerObservacion(tema.observaciones)"></div>
+                    <div class="text-color" [innerHTML]="tema?.observaciones"></div>
                   </section>
                   <h2 class="card-subTitle">Decisiones</h2>
                   <div class="reparacion-card row">
@@ -264,7 +264,7 @@
                   </p>
                   <section>
                     <b>Recomendaciones/Observaciones</b>:
-                    <div class="text-color" [innerHTML]="innerObservacion(tema.observacionesDecision)"></div>
+                    <div class="text-color" [innerHTML]="tema?.observacionesDecision"></div>
                   </section>
                   <h2 class="card-subTitle">Compromisos</h2>
                   <div class="row">
@@ -341,7 +341,7 @@
                   </p>
                   <section>
                     <b>Observaciones</b>:
-                    <div class="text-color" [innerHTML]="innerObservacion(tema.observaciones)"></div>
+                    <div class="text-color" [innerHTML]="tema?.observaciones"></div>
                   </section>
                   <h2 class="card-subTitle">Decisiones</h2>
                   <div class="reparacion-card row">
@@ -360,7 +360,7 @@
                   </p>
                   <section>
                     <b>Recomendaciones/Observaciones</b>:
-                    <div class="text-color" [innerHTML]="innerObservacion(tema.observacionesDecision)"></div>
+                    <div class="text-color" [innerHTML]="tema?.observacionesDecision"></div>
                   </section>
                   <h2 class="card-subTitle">Compromisos</h2>
                   <div class="row">
