--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.scss
@@ -22,9 +22,7 @@ th.mat-header-cell {
 }
 
 .text-limit{
-  max-width: calc(100% - 1em);
-  display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  max-height: 60px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
