--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -159,7 +159,7 @@
           <label><b>URL con soportes</b></label>
         </div>
         <div class="col w-80">
-          <span class="color-blue"> <b>{{ solicitudes.rutaSoporteVotacion }}</b> </span>
+          <span class="color-blue"> <b class="text-break">{{ solicitudes.rutaSoporteVotacion }}</b> </span>
         </div>
       </div>
       <div class="row" *ngIf="solicitudes.rutaSoporteVotacionFiduciario && esComiteFiduciario === true">
@@ -167,7 +167,7 @@
           <label><b>URL con soportes</b></label>
         </div>
         <div class="col w-80">
-          <span class="color-blue"> <b>{{ solicitudes.rutaSoporteVotacionFiduciario }}</b> </span>
+          <span class="color-blue"> <b class="text-break">{{ solicitudes.rutaSoporteVotacionFiduciario }}</b> </span>
         </div>
       </div>
       <h2 class="card-subTitle">Compromisos</h2>
