--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
@@ -37,11 +37,13 @@
                 <div *ngIf="data.esVerDetalle === true">
                   <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
                   <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
+                  <span *ngIf="addressForm.get('noAplica').value === true">No aplica</span>
                 </div>
                 <div *ngIf="data.esVerDetalle !== true">
                   <mat-radio-group class="radioInput" formControlName="aprobacion" required>
                     <mat-radio-button [value]="true">Sí</mat-radio-button>
                     <mat-radio-button [value]="false">No</mat-radio-button>
+                    <mat-radio-button value="noAplica">No aplica</mat-radio-button>
                   </mat-radio-group>
                   <span class="required-form-group">*</span>
                 </div>
@@ -120,6 +122,7 @@
             <td class="mat-cell cdk-cell ng-star-inserted">
               <span *ngIf="addressForm.controls[i].get('aprobacion').value === true">Sí</span>
               <span *ngIf="addressForm.controls[i].get('aprobacion').value !== true">No</span>
+              <span *ngIf="addressForm.controls[i].get('noAplica').value === true">No aplica</span>
             </td>
             <td class="mat-cell cdk-cell ng-star-inserted">
               <p [innerHTML]="addressForm.controls[i].get('observaciones').value">
